# VAD-GenAI

./: README.md  pyproject.toml  video_summarizer.py
